--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,5 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.0.4", features = ["color", "derive", "wrap_help"] }
+serde = { version = "1.0.145", features = ["derive"] }
 thiserror = "1.0.37"
