--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 chrono = { version = "0.4.22", features = ["serde"] }
 clap = { version = "4.0.4", features = ["color", "derive", "wrap_help"] }
+directories = "4.0.1"
 serde = { version = "1.0.145", features = ["derive"] }
 serde_json = "1.0.85"
 serde_with = { version = "2.0.1", features = ["chrono"] }
